// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamAgent should return streaming response with sequential process method (multiple agent with different output keys) 1`] = `
[
  {
    "delta": {
      "text": {
        "first": "Hello",
      },
    },
  },
  {
    "delta": {
      "text": {
        "first": ",",
      },
    },
  },
  {
    "delta": {
      "text": {
        "first": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": "Hello",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": ",",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": "world",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": "!",
      },
    },
  },
]
`;

exports[`TeamAgent should return streaming response with parallel process method (multiple agent with different output keys) 1`] = `
[
  {
    "delta": {
      "text": {
        "first": "Hello",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": "Hello",
      },
    },
  },
  {
    "delta": {
      "text": {
        "first": ",",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": ",",
      },
    },
  },
  {
    "delta": {
      "text": {
        "first": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": "world",
      },
    },
  },
  {
    "delta": {
      "text": {
        "second": "!",
      },
    },
  },
]
`;

exports[`TeamAgent should return streaming response with sequential process method (multiple agent with same output key) 1`] = `
[
  {
    "delta": {
      "text": {
        "text": "Hello",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": ",",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": "Hello",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": ",",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": "world",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": "!",
      },
    },
  },
]
`;

exports[`TeamAgent should return streaming response with parallel process method (multiple agent with same output key) 1`] = `
[
  {
    "delta": {
      "text": {
        "text": "Hello",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": ",",
      },
    },
  },
  {
    "delta": {
      "text": {
        "text": " ",
      },
    },
  },
]
`;

exports[`TeamAgent with sequential mode should yield output chunks correctly 1`] = `
[
  {
    "delta": {
      "json": {
        "question": "What is AIGNE?",
        "result": [
          {
            "link": "https://example.com/1",
            "title": "First Result",
          },
          {
            "link": "https://example.com/2",
            "title": "Second Result",
          },
        ],
      },
    },
  },
  {
    "delta": {
      "text": {
        "summary": "First",
      },
    },
  },
  {
    "delta": {
      "text": {
        "summary": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "summary": "Result",
      },
    },
  },
  {
    "delta": {
      "text": {
        "summary": ",",
      },
    },
  },
  {
    "delta": {
      "text": {
        "summary": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "summary": "Second",
      },
    },
  },
  {
    "delta": {
      "text": {
        "summary": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "summary": "Result",
      },
    },
  },
]
`;

exports[`TeamAgent with iterateOn should process array input correctly 1`] = `
{
  "sections": [
    {
      "description": "Description for Test title 0",
    },
    {
      "description": "Description for Test title 1",
    },
    {
      "description": "Description for Test title 2",
    },
  ],
}
`;

exports[`TeamAgent with iterateOn should process array input correctly 2`] = `
[
  {
    "sections": [
      {
        "title": "Test title 0",
      },
      {
        "title": "Test title 1",
      },
      {
        "title": "Test title 2",
      },
    ],
    "title": "Test title 0",
  },
  {
    "sections": [
      {
        "title": "Test title 0",
      },
      {
        "title": "Test title 1",
      },
      {
        "title": "Test title 2",
      },
    ],
    "title": "Test title 1",
  },
  {
    "sections": [
      {
        "title": "Test title 0",
      },
      {
        "title": "Test title 1",
      },
      {
        "title": "Test title 2",
      },
    ],
    "title": "Test title 2",
  },
]
`;

exports[`TeamAgent with iterateOn should iterate with previous step's output 1`] = `
{
  "sections": [
    {
      "description": "Description for Test title 0",
    },
    {
      "description": "Description for Test title 1",
    },
    {
      "description": "Description for Test title 2",
    },
  ],
}
`;

exports[`TeamAgent with iterateOn should iterate with previous step's output 2`] = `
[
  {
    "sections": [
      {
        "title": "Test title 0",
      },
      {
        "title": "Test title 1",
      },
      {
        "title": "Test title 2",
      },
    ],
    "title": "Test title 0",
  },
  {
    "sections": [
      {
        "description": "Description for Test title 0",
        "title": "Test title 0",
      },
      {
        "title": "Test title 1",
      },
      {
        "title": "Test title 2",
      },
    ],
    "title": "Test title 1",
  },
  {
    "sections": [
      {
        "description": "Description for Test title 0",
        "title": "Test title 0",
      },
      {
        "description": "Description for Test title 1",
        "title": "Test title 1",
      },
      {
        "title": "Test title 2",
      },
    ],
    "title": "Test title 2",
  },
]
`;
